--- a/text/back/bibliography.tex
+++ b/text/back/bibliography.tex
@@ -13,22 +13,15 @@ Steve Krug.
 \newblock ISBN: 0321344758.
 
 \bibitem{jakonielsen}
-Jakob Nielsen, Marie Tahir.
-\newblock {\em Usabilidad de páginas de inicio : análisis de 50 sitios web.}
-\newblock Prentice Hall, 2002.
-\newblock ISBN: 8420532029.
+Jakob Nielsen.
+\newblock {\em 10 Usability Heuristics for User Interface Design.}
+\newblock Nielsen Norman Group, 1995.
 
 \bibitem{melenaalva}
 María Elena Alva Obeso.
 \newblock {\em Metodología de medición y evaluación de la usabilidad en sitios Web educativos.}
 \newblock Universidad de Oviedo, 2005.
 \newblock ISBN: 9788483175842.
-
-\bibitem{taniaschlatter}
-Tania Schlatter, Deborah Levinson.
-\newblock {\em Visual usability: principles and practices for designing digital applications.}
-\newblock Morgan Kaufmann, 2013.
-\newblock ISBN: 9780124017139.
 
 \bibitem{ericreiss}
 Eric Reiss.
