--- a/text/back/glossary.tex
+++ b/text/back/glossary.tex
@@ -49,6 +49,8 @@
 \textbf{JSON (JavaScript Object Notation)}: formato de texto plano usado para el intercambio de información, independientemente del lenguaje de programación.
 \bigskip
 
+\textbf{ettercap}: Ettercap es un sniffer. Soporta direcciones activas y pasivas de varios protocolos (incluso aquellos cifrados, como SSH y HTTPS). También hace posible la inyección de datos en una conexión establecida y filtrado al vuelo aun manteniendo la conexión sincronizada gracias a su poder para establecer un Ataque Man-in-the-middle(Spoofing).
+\bigskip
 
 \textbf{Expresión regular}: Una expresión regular, a menudo llamada también regex, es una secuencia de caracteres que forma un patrón de búsqueda, principalmente utilizada para la búsqueda de patrones de cadenas de caracteres u operaciones de sustituciones
 \bigskip
