--- a/text/back/bibliography.tex
+++ b/text/back/bibliography.tex
@@ -33,6 +33,8 @@ Eric Reiss.
 \subsubsection*{Artículos sobre las metodologías utilizadas en el proyecto:}
 
 
+\bibitem{art_11} ``Having problems with SSL by René Breedveld
+'' .René Breedveld. 30/10/2015. \url{https://github.com/dmuneras/moodle-theme_archaius/wiki/Having-problems-with-SSL-byRen\%C3\%A9-Breedveld}
 
 \bibitem{art_10} ``An user can enter with an admin role only copying valid sessionID from another computer with the same IP address.''. Juan Carlos Molina Giménez, 18/01/2016. \url{https://tracker.moodle.org/browse/MDL-52812}
 
