extended abstract traducido

--- a/text/back/bibliography.tex
+++ b/text/back/bibliography.tex
@@ -33,8 +33,9 @@ Eric Reiss.
 \subsubsection*{Artículos sobre las metodologías utilizadas en el proyecto:}
 
 
-\bibitem{art_11} ``Having problems with SSL by René Breedveld
-'' .René Breedveld. 30/10/2015. \url{https://github.com/dmuneras/moodle-theme_archaius/wiki/Having-problems-with-SSL-byRen\%C3\%A9-Breedveld}
+\bibitem{art_11} ``Legislación sobre accesibilidad web en España, Europa y otros países''. Olga Carreras Montoto. 11/12/2016. \url{https://olgacarreras.blogspot.com.es/2005/01/referencia-sobre-legislacin-espaola.html}
+
+\bibitem{art_11} ``Having problems with SSL by René Breedveld''. René Breedveld. 30/10/2015. \url{https://github.com/dmuneras/moodle-theme_archaius/wiki/Having-problems-with-SSL-byRen\%C3\%A9-Breedveld}
 
 \bibitem{art_10} ``An user can enter with an admin role only copying valid sessionID from another computer with the same IP address.''. Juan Carlos Molina Giménez, 18/01/2016. \url{https://tracker.moodle.org/browse/MDL-52812}
 
@@ -68,7 +69,10 @@ Eric Reiss.
 \bibitem{moodletheme} {\tt archaius theme}. \url{https://moodle.org/plugins/theme_archaius}
 \bibitem{rae} {\tt Diccionario RAE}. \url{http://dle.rae.es/}
 \bibitem{w3c} {\tt W3C}. \url{https://www.w3.org/}
+\bibitem{wcag} {\tt WCAG}. \url{https://www.w3.org/TR/WCAG/}
 \bibitem{taw} {\tt T.A.W.}. \url{http://www.tawdis.net/}
+\bibitem{tenon} {\tt tenon.io}. \url{https://tenon.io}
+\bibitem{codesniffer} {\tt HTML CodeSniffer}. \url{http://squizlabs.github.io/HTML_CodeSniffer/}
 \bibitem{openwrt} {\tt OpenWRT}. \url{https://wiki.openwrt.org/toh/huawei/hg556a}
 \bibitem{moodledb} Moodle Database Schema. \url{https://docs.moodle.org/dev/Database_Schema}
 
