--- a/text/back/glossary.tex
+++ b/text/back/glossary.tex
@@ -19,6 +19,12 @@
  \textbf{Auditoría de seguridad}: estudio que comprende el análisis y gestión de sistemas llevado a cabo por profesionales para identificar, enumerar y posteriormente describir las diversas vulnerabilidades que pudieran presentarse en una revisión exhaustiva de las estaciones de trabajo, redes de comunicaciones o servidores.
 \bigskip
 
+ \textbf{WCAG}: Pautas de Accesibilidad para el Contenido Web (WCAG) 2.0 (traducción al castellano de Web Content Accessibility Guidelines 2.0) son una serie de normas de accesibilidad Web definidas por el World Wide Web Consortium (W3C).
+\bigskip
+
+
+
+
 \textbf{SCORM}: (del inglés Sharable Content Object Reference Model) es un conjunto de estándares y especificaciones que permite crear objetos pedagógicos estructurados. Los sistemas de gestión de contenidos en web originales usaban formatos propietarios para los contenidos que distribuían.
 \bigskip
 
