--- a/text/prefaces/prefaces.tex
+++ b/text/prefaces/prefaces.tex
@@ -32,43 +32,29 @@ El informe final tendrá como objetivo dar a conocer tanto las fortalezas como l
 \bigskip
 \noindent{\textbf{Keywords}: \textit{\keywordsen}\\
 
--ESTO DEBE SER TRADUCIDO-
+This project’s objective is the development of a professional report on the Plataforma de Recursos de Apoyo a la Docencia (Teaching Support Resources Platform), currently in use by the Universidad de Granada, analyzing its accessibility, usability, safety and availability.
 
-\bigskip
-Este proyecto tiene como objetivo la elaboración de un informe profesional sobre la Plataforma de Recursos de Apoyo a la docencia en uso actualmente por la Universidad de Granada analizando su Accesibilidad, Usabilidad, Seguridad y Disponibilidad.
+\bigskipIn order to develop this analysis, users of the platform have taken surveys, statistics of usage have been analyzed in cooperation with the administrators of this platform, the moodle platform has been analyzed, developer’s good practice recommendations have been inspected and some of the vulnerabilities documented in its CVE have been studied.
 
-\bigskip
-Para dicho análisis se realizaron encuestas a usuarios de la plataforma, se analizaron las estadísticas de uso en colaboración con los administradores de la misma y se analizó el código de la plataforma moodle, se revisaron las recomendaciones de buenas practicas de sus desarrolladores y se estudiaron algunas de las vulnerabilidades documentadas en su CVE \footnote{Common Vulnerabilities and Exposures, siglas CVE, es una lista de información registrada sobre conocidas vulnerabilidades de seguridad, donde cada referencia tiene un número de identificación único.}.
+\bigskipThe final report’s objective will be showing the strengths and weaknesses of the Prado2 platform, with the purpose of aiding their administrators in the improvement of the platform and at the same time, helping them getting to know the opinion of the its users.
 
-\bigskip
-El informe final tendrá como objetivo dar a conocer tanto las fortalezas como las debilidades de la plataforma Prado2 con objeto de servir de ayuda a sus administradores para mejorar la misma y ayudándoles a su vez a conocer la opinión de sus usuarios.
+\bigskipAs we already know, Internet has had an academic nature practically since its birth, thus, the greatest innovations and almost all its approach has emerged from this circles previous to the net’s democratization and Internet’s global access.  It’s unthinkable nowadays conceiving education without the use of Internet, and maybe in a not too far away future, the whole of teaching will be done through the net.
 
-\bigskip
-Como ya sabemos Internet ha tenido un carácter académico desde prácticamente su nacimiento y por ello las mayores innovaciones y casi todo su enfoque ha salido de estos ámbitos previos a la democratización de la red y el acceso global a Internet. Es impensable concebir hoy día la enseñanza sin hacer uso de Internet y puede que en un futuro no muy lejano la totalidad de la enseñanza se imparta a través de la red.
+\bigskipBut a wide use is unconceivable without an appropriate, friendly, simple and even attractive interface, this is why many companies spend millions of dollars improving theirs. ‘Usability has come to stay’.\cite{jakonielsen} 
 
-\bigskip
-Pero un uso tan generalizado es inconcebible sin una interfaz adecuada que sea amigable, sencilla e incluso atrayente y es por eso que muchas empresas gastan millones de dólares en mejorar las interfaces. 'La usabilidad ha venido para quedarse'.
+\bigskipAfter the final implementation of the Prado2 platform by the Digital University Rector’s Delegation (Delegación de la Rectora para la Universidad Digital) criticism has taken place among students and teachers towards the platform’s deficiencies. This, combined with the insufficient resources which the CEVUG (Virtual Teaching Centre of Granada University) needs to offer an adequate service, has precipitated that a potent and well established platform as moodle generates rejection, in the kind words of Steve Krug ‘If a system is unusable, no one will want to use it’\cite{stevekrug}.
 
-\bigskip
-Tras la implantación definitiva de la plataforma Prado2 por parte de la Delegación de la Rectora para la Universidad Digital se han venido sucediendo críticas por parte tanto de alumnos como profesores a las carencias de la plataforma, esto, junto a los insuficientes recursos con los que cuenta el CEVUG para dar un servicio adecuado ha hecho que una plataforma potente y consolidada como es moodle genere rechazo ya que como bien apuntaba Steve Krug: 'Si un sistema no es usable nadie lo querrá usar'.
+\bigskipWith respect to the platform’s previous analysis, we found various errors that could be easily resolved improving in a great manner the easiness of usage.
 
-\bigskip
-En cuanto al análisis previo de la plataforma, vimos que efectivamente encontrábamos diversos errores de simple solución que mejorarían enormemente la facilidad de uso.
+\bigskipThe survey’s results were the expected and we observed that the vast majority of users just need a platform where they can upload and download documents, and create tasks. We also observed that a good number of users would find very useful a better access from mobile platforms, either using a mobile browser adapted design or using a native smartphone app.
 
-\bigskip
-Los resultados de la encuesta fueron los esperados y vimos que la inmensa mayoría de usuarios solo necesitan una plataforma donde subir y descargar documentos y crear tareas. También vimos que una gran cantidad de usuarios encontraría muy útil un mejor acceso desde plataformas móviles ya sea utilizando un diseño adaptado a navegadores móviles o utilizando un aplicación nativa para smartphones.
+\bigskipThe analysis of the platform’s registry back the survey’s results. A minimum percentage of the platform’s features is barely used, and this could be used to deactivate some options in order to make Prado’s usability easier.
 
-\bigskip
-El análisis sobre los registros de la plataforma respaldan los resultados de la encuesta. No se llega a usar apenas un mínimo porcentaje de las características de la plataforma y se podría aprovechar esto para desactivar algunas opciones que hagan mas simple el uso de Prado.
+\bigskipIn terms of security we demonstrate that it’s quite deficient and should be immediately improved, a malicious user could steal information and documents from teachers or students and make an illicit use of them.
 
-\bigskip
-En cuanto a seguridad demostramos que es bastante deficiente y que debería mejorarse de inmediato ya que un usuario malintencionado podría robar información y documentos tanto de profesores como de alumnos y hacer un uso ilícito de los mismos.
+\bigskipI would like to stress the great effort performed by the CEVUG professionals and I do not wish that this analysis is understood as a criticism towards their excellent job. With my experience as a web developer I can affirm that it’s not easy to have in mind thousands of aspects required to customize, adapt and optimize a platform, more so when you work against the clock solving problems, which in many cases just allows making a “temporary” adjustment that stands in time indefinitely. This is why this report, although addressed to them as an aid to optimize the platform, maybe should make their superiors see that something as important as the teaching support web platform should have more resources.
 
-\bigskip
-Quiero hacer hincapié en el gran esfuerzo realizado por los profesionales del CEVUG y no quiero que este análisis se entienda como una crítica hacia su excelente trabajo. Con mi experiencia como desarrollador web puedo afirmar que no es fácil tener en cuenta los miles de detalles requeridos para personalizar, adaptar y optimizar una plataforma y mas cuando se trabaja a contrarreloj solucionando problemas lo que en muchos casos no permite mas que hacer un ajuste "temporal" que perdura en el tiempo indefinidamente. Por ello este informe, aunque dirigido a ellos como ayuda para optimizar la plataforma quizá debería servirles para hacer ver a sus superiores que algo tan importante como la plataforma web de apoyo a la docencia debería tener mas medios.
-
-\bigskip
-Sólo como nota, para gestionar su cuenta de twitter la policía nacional de España cuenta con un equipo de 8 personas a tiempo completo. Prado, que evidentemente es mas complejo y requiere muchísimo más trabajo solo cuenta con un desarrollador a tiempo completo y dos personas auxiliares a tiempo parcial.
+\bigskipJust as a referral, Spain’s National Police Corps uses a full time team of 8 to manage their twitter account. Prado, being clearly more complex and requiring much more work only counts with a full time developer and two part-time auxiliaries. 
 
 \newpage
 \thispagestyle{empty}
