some mistakes fixed with @BraulioV

--- a/text/prefaces/prefaces.tex
+++ b/text/prefaces/prefaces.tex
@@ -30,31 +30,43 @@ El informe final tendrá como objetivo dar a conocer tanto las fortalezas como l
 \section*{Extended abstract}
 
 \bigskip
-\noindent{\textbf{Keywords}: \textit{\keywordsen}\\
+\noindent{\textbf{Keywords}: \textit{\keywordsen}.\\
 
-This project’s objective is the development of a professional report on the Plataforma de Recursos de Apoyo a la Docencia (Teaching Support Resources Platform), currently in use by the Universidad de Granada, analyzing its accessibility, usability, safety and availability.
+The goal of this project is to develop a professional report on the \textit{Plataforma de Recursos de Apoyo a la Docencia} (Teaching Support Resources Platform), currently in use by \textit{Universidad de Granada}, analyzing its accessibility, usability, security and availability.
 
-\bigskipIn order to develop this analysis, users of the platform have taken surveys, statistics of usage have been analyzed in cooperation with the administrators of this platform, the moodle platform has been analyzed, developer’s good practice recommendations have been inspected and some of the vulnerabilities documented in its CVE have been studied.
+\bigskip
+To develop this report, we have analyzed data comming from surveys made by platform's users and usage statistics. The usage statistics have been analyzed in cooperation with its administrators. Also, we have analyze Moodle's source code, reviewed the \textit{Moodle developers' good practices recommendations} and studied some of the vulnerabilities documented in the \textit{Common Vulnerabilities and Exposures} or \textit{CVE}.
 
-\bigskipThe final report’s objective will be showing the strengths and weaknesses of the Prado2 platform, with the purpose of aiding their administrators in the improvement of the platform and at the same time, helping them getting to know the opinion of the its users.
+\bigskip
+The goal of this report is to show the \textit{Prado2's} strengths and weaknesses, with the purpose of aiding its administrators to improve the platform and, at the same time, helping them getting to know the opinion of the its users.
 
-\bigskipAs we already know, Internet has had an academic nature practically since its birth, thus, the greatest innovations and almost all its approach has emerged from this circles previous to the net’s democratization and Internet’s global access.  It’s unthinkable nowadays conceiving education without the use of Internet, and maybe in a not too far away future, the whole of teaching will be done through the net.
+\bigskip
+As we already know, Internet has had an academic nature since its beggining, thus, the greatest innovations and almost all its approach have emerged from those areas, before the net’s democratization and Internet’s global access. Nowadays, it’s unbelievable to conceive education without Internet, and maybe someday, teaching will be online.
 
-\bigskipBut a wide use is unconceivable without an appropriate, friendly, simple and even attractive interface, this is why many companies spend millions of dollars improving theirs. ‘Usability has come to stay’.\cite{jakonielsen} 
+\bigskip
+But a wide use is unconceivable without an appropriate, friendly, simple and even attractive interface. This is why many companies spend millions of dollars improving theirs. ``Usability has come to stay''.\cite{jakonielsen} 
 
-\bigskipAfter the final implementation of the Prado2 platform by the Digital University Rector’s Delegation (Delegación de la Rectora para la Universidad Digital) criticism has taken place among students and teachers towards the platform’s deficiencies. This, combined with the insufficient resources which the CEVUG (Virtual Teaching Centre of Granada University) needs to offer an adequate service, has precipitated that a potent and well established platform as moodle generates rejection, in the kind words of Steve Krug ‘If a system is unusable, no one will want to use it’\cite{stevekrug}.
+\bigskip
+Since the final implementation of the \textit{Prado2 platform} by the \textit{Digital University Rector’s Delegation} (Delegación de la Rectora para la Universidad Digital) a hail of criticism has taken place among students and teachers towards the platform’s deficiencies. All of this, combined with the insufficient resources which the \textit{CEVUG (Virtual Teaching Centre of Granada University)} needs to offer an appropriate service, have made a potent and well established platform as moodle being rejected. In the kind words of \textit{Steve Krug}, ``If a system is unusable, no one will want to use it'' \cite{stevekrug}.
 
-\bigskipWith respect to the platform’s previous analysis, we found various errors that could be easily resolved improving in a great manner the easiness of usage.
+\bigskip
+Regarding to the platform's previous analysis, we found some errors that could be easily resolved and would improve hugely the ease of use.
 
-\bigskipThe survey’s results were the expected and we observed that the vast majority of users just need a platform where they can upload and download documents, and create tasks. We also observed that a good number of users would find very useful a better access from mobile platforms, either using a mobile browser adapted design or using a native smartphone app.
+\bigskip
+The survey resulted as expected and we noticed that the vast majority of users just need a platform where they can upload and download documents, and create tasks. We also noticed that a good number of users would find very useful a better access from mobile platforms, either using a mobile browser adapted design or using a native smartphone app.
 
-\bigskipThe analysis of the platform’s registry back the survey’s results. A minimum percentage of the platform’s features is barely used, and this could be used to deactivate some options in order to make Prado’s usability easier.
+\bigskip
+The analysis of the platform's logs support the survey’s results. A minimum percentage of the platform’s features is barely used. Some options could be deactivated in order to increase Prado’s usability.
 
-\bigskipIn terms of security we demonstrate that it’s quite deficient and should be immediately improved, a malicious user could steal information and documents from teachers or students and make an illicit use of them.
+\bigskip
+With regard to security, we show that it's quite low and should be immediately improved. A malicious user could steal information and documents from teachers or students and make an illicit use of them.
 
-\bigskipI would like to stress the great effort performed by the CEVUG professionals and I do not wish that this analysis is understood as a criticism towards their excellent job. With my experience as a web developer I can affirm that it’s not easy to have in mind thousands of aspects required to customize, adapt and optimize a platform, more so when you work against the clock solving problems, which in many cases just allows making a “temporary” adjustment that stands in time indefinitely. This is why this report, although addressed to them as an aid to optimize the platform, maybe should make their superiors see that something as important as the teaching support web platform should have more resources.
+\bigskip
+I would like to highlight the great effort made by the CEVUG professionals and I do not wish that this analysis is understood as a critique towards their excellent job. With my experience as a web developer I can affirm that it’s not easy to keep in mind thousands of aspects required to customize, adapt and optimize a platform, more so when you work against the clock solving problems, which in many cases just allows making a ``temporary'' solution that stands in time indefinitely. This is why this report, although addressed to them as an aid to optimize the platform, maybe should make their superiors realize that something as important as the teaching support web platform should have more resources.
 
-\bigskipJust as a referral, Spain’s National Police Corps uses a full time team of 8 to manage their twitter account. Prado, being clearly more complex and requiring much more work only counts with a full time developer and two part-time auxiliaries. 
+\bigskip
+Just as a referral, Spain’s National Police Corps uses a full time team of 8 to manage their twitter account. Prado, being clearly more complex and requiring much more work only counts with a full time developer and two part-time auxiliaries. 
+
 
 \newpage
 \thispagestyle{empty}
