--- a/text/project.tex
+++ b/text/project.tex
@@ -43,7 +43,7 @@
 \newcommand{\vers}{Versión 0.1}
 \providecommand{\keywords}{software libre, docencia, moodle, análisis, accesibilidad, usabilidad, seguridad, disponibilidad}
 
-\providecommand{\keywordsen}{free software, teaching, moodle, analysis, accessibility usability, security, availability}
+\providecommand{\keywordsen}{free software, teaching, moodle, analysis, accessibility, usability, security, availability}
 
 
 % Información archivo
