--- a/text/prefaces/prefaces.tex
+++ b/text/prefaces/prefaces.tex
@@ -10,10 +10,10 @@
 \bigskip
 \noindent{\textbf{Palabras clave}: \textit{\keywords}\\
 
-Este proyecto tiene como objetivo la elaboración de un informe profesional sobre la \textit{Plataforma de Recursos de Apoyo a la docencia} en uso actualmente por la \textit{Universidad de Granada} analizando su {\tt Accesibilidad}, {\tt Usabilidad}, {\tt Seguridad} y Disponibilidad.
+Este proyecto tiene como objetivo la elaboración de un informe profesional sobre la \textit{Plataforma de Recursos de Apoyo a la docencia} en uso actualmente por la \textit{Universidad de Granada} analizando su {\tt Accesibilidad}, {\tt Usabilidad}, {\tt Seguridad} y \tt{Disponibilidad}.
 
 \bigskip
-Para dicho análisis se realizaron encuestas a usuarios de la plataforma, se analizaron las estadísticas de uso en colaboración con los administradores de la misma y se analizó el código de la plataforma \textit{moodle}, se revisaron las recomendaciones de buenas practicas de sus desarrolladores y se estudiaron algunas de las vulnerabilidades documentadas en su CVE\footnote{Common Vulnerabilities and Exposures, siglas CVE, es una lista de información registrada sobre conocidas vulnerabilidades de seguridad, donde cada referencia tiene un número de identificación único.}.
+Para dicho análisis se realizaron encuestas a usuarios de la plataforma, se analizaron las estadísticas de uso en colaboración con los administradores de la misma, se analizó el código de la plataforma \textit{moodle}, se revisaron las recomendaciones de buenas practicas de sus desarrolladores y se estudiaron algunas de las vulnerabilidades documentadas en sus CVE\footnote{Common Vulnerabilities and Exposures, siglas CVE, es una lista de información registrada sobre conocidas vulnerabilidades de seguridad, donde cada referencia tiene un número de identificación único.}.
 
 \bigskip
 El informe final tendrá como objetivo dar a conocer tanto las fortalezas como las debilidades de la plataforma Prado2 con objeto de servir de ayuda a sus administradores para mejorar la misma y ayudándoles a su vez a conocer la opinión de sus usuarios.
@@ -35,37 +35,37 @@ El informe final tendrá como objetivo dar a conocer tanto las fortalezas como l
 The goal of this project is to develop a professional report on the \textit{Plataforma de Recursos de Apoyo a la Docencia} (Teaching Support Resources Platform), currently in use by \textit{Universidad de Granada}, analyzing its accessibility, usability, security and availability.
 
 \bigskip
-To develop this report, we have analyzed data comming from surveys made by platform's users and usage statistics. The usage statistics have been analyzed in cooperation with its administrators. Also, we have analyze Moodle's source code, reviewed the \textit{Moodle developers' good practices recommendations} and studied some of the vulnerabilities documented in the \textit{Common Vulnerabilities and Exposures} or \textit{CVE}.
+To develop this report, we have analyzed the data comming from surveys made by platform's users and usage statistics. The usage statistics have been analyzed in cooperation with its administrators. Also, we have analyzed Moodle's source code, reviewed the \textit{Moodle developers' good practices recommendations} and studied some of the vulnerabilities documented in the \textit{Common Vulnerabilities and Exposures} or \textit{CVE}.
 
 \bigskip
-The goal of this report is to show the \textit{Prado2's} strengths and weaknesses, with the purpose of aiding its administrators to improve the platform and, at the same time, helping them getting to know the opinion of the its users.
+The goal of this report is to show the \textit{Prado2's} strengths and weaknesses, with the purpose of aiding its administrators to improve the platform and, at the same time, helping them getting to know the opinion of the users.
 
 \bigskip
-As we already know, Internet has had an academic nature since its beggining, thus, the greatest innovations and almost all its approach have emerged from those areas, before the net’s democratization and Internet’s global access. Nowadays, it’s unbelievable to conceive education without Internet, and maybe someday, teaching will be online.
+As we already know, Internet has had an academic nature since its beggining, thus, the greatest innovations and almost all its approach have emerged from those areas, before the net democratization and Internet global access. Nowadays, it’s unbelievable to imagine the education without Internet, and maybe someday, teaching will be online.
 
 \bigskip
-But a wide use is unconceivable without an appropriate, friendly, simple and even attractive interface. This is why many companies spend millions of dollars improving theirs. ``Usability has come to stay''.\cite{jakonielsen} 
+But a wide use is unconceivable without an appropriate, friendly, simple and even attractive user interface. This is why many companies spend millions of dollars improving theirs. ``Usability has come to stay''.\cite{jakonielsen} 
 
 \bigskip
 Since the final implementation of the \textit{Prado2 platform} by the \textit{Digital University Rector’s Delegation} (Delegación de la Rectora para la Universidad Digital) a hail of criticism has taken place among students and teachers towards the platform’s deficiencies. All of this, combined with the insufficient resources which the \textit{CEVUG (Virtual Teaching Centre of Granada University)} needs to offer an appropriate service, have made a potent and well established platform as moodle being rejected. In the kind words of \textit{Steve Krug}, ``If a system is unusable, no one will want to use it'' \cite{stevekrug}.
 
 \bigskip
-Regarding to the platform's previous analysis, we found some errors that could be easily resolved and would improve hugely the ease of use.
+Regarding to the platform's previous analysis, we found some errors that could be easily resolved and they would improve hugely the ease of use.
 
 \bigskip
-The survey resulted as expected and we noticed that the vast majority of users just need a platform where they can upload and download documents, and create tasks. We also noticed that a good number of users would find very useful a better access from mobile platforms, either using a mobile browser adapted design or using a native smartphone app.
+The survey resulted as expected and we noticed that the vast majority of users just need a platform where they can upload and download documents, and create tasks. We also noticed that a good number of users would find very useful a better access from mobile platforms, either using a design adapted for mobile browsers, or a native smartphone app.
 
 \bigskip
-The analysis of the platform's logs support the survey’s results. A minimum percentage of the platform’s features is barely used. Some options could be deactivated in order to increase Prado’s usability.
+The analysis of the platform logs support the survey results. A minimum percentage of the platform’s features is barely used. Some options could be deactivated in order to increase Prado’s usability.
 
 \bigskip
 With regard to security, we show that it's quite low and should be immediately improved. A malicious user could steal information and documents from teachers or students and make an illicit use of them.
 
 \bigskip
-I would like to highlight the great effort made by the CEVUG professionals and I do not wish that this analysis is understood as a critique towards their excellent job. With my experience as a web developer I can affirm that it’s not easy to keep in mind thousands of aspects required to customize, adapt and optimize a platform, more so when you work against the clock solving problems, which in many cases just allows making a ``temporary'' solution that stands in time indefinitely. This is why this report, although addressed to them as an aid to optimize the platform, maybe should make their superiors realize that something as important as the teaching support web platform should have more resources.
+I would like to highlight the great effort made by the CEVUG professionals and I don't want this analysys to be understood as a critique towards their excellent job. With my experience as a web developer I can affirm that it’s not easy to keep in mind thousands of aspects required to customize, adapt and optimize a platform, more so when you work against the clock solving problems, which in many cases just allows making a ``temporary'' solution that stands in time indefinitely. This is why this report, although addressed to them as an aid to optimize the platform, maybe should make their superiors realize that something as important as the teaching support web platform should have more resources.
 
 \bigskip
-Just as a referral, Spain’s National Police Corps uses a full time team of 8 to manage their twitter account. Prado, being clearly more complex and requiring much more work only counts with a full time developer and two part-time auxiliaries. 
+Just as a referral, Spain’s National Police Corps uses a full time team of 8 people to manage their twitter account. Prado, being clearly more complex and requiring much more work only counts with a full time developer and two part-time auxiliaries. 
 
 
 \newpage
