--- a/text/prefaces/prefaces.tex
+++ b/text/prefaces/prefaces.tex
@@ -32,42 +32,39 @@ El informe final tendrá como objetivo dar a conocer tanto las fortalezas como l
 \bigskip
 \noindent{\textbf{Keywords}: \textit{\keywordsen}.\\
 
-The goal of this project is to develop a professional report on the \textit{Plataforma de Recursos de Apoyo a la Docencia} (Teaching Support Resources Platform), currently in use by \textit{Universidad de Granada}, analyzing its accessibility, usability, security and availability.
+The goal of this project is to develop a professional report on the \textit{Plataforma de Recursos de Apoyo a la Docencia} (Teaching Support Resources Platform), currently in use by the \textit{University of Granada}, analyzing its accessibility, usability, security and availability.
 
 \bigskip
-To develop this report, we have analyzed the data comming from surveys made by platform's users and usage statistics. The usage statistics have been analyzed in cooperation with its administrators. Also, we have analyzed Moodle's source code, reviewed the \textit{Moodle developers' good practices recommendations} and studied some of the vulnerabilities documented in the \textit{Common Vulnerabilities and Exposures} or \textit{CVE}.
+To develop this research paper, we have analyzed the data comming from surveys made by platform's users and usage statistics. The usage statistics have been analyzed in cooperation with its administrators. Also, we have analyzed Moodle's source code, reviewed the \textit{Moodle developers' good practices recommendations} and studied some of the vulnerabilities documented in the \textit{Common Vulnerabilities and Exposures} or \textit{CVE}.
 
 \bigskip
-The goal of this report is to show the \textit{Prado2's} strengths and weaknesses, with the purpose of aiding its administrators to improve the platform and, at the same time, helping them getting to know the opinion of the users.
+The aim of final report is to show the \textit{Prado2's} strengths and weaknesses, with the purpose of helping its administrators to make improvements the platform and, at the same time, helping them getting to know the opinion of the users.
 
 \bigskip
-As we already know, Internet has had an academic nature since its beggining, thus, the greatest innovations and almost all its approach have emerged from those areas, before the net democratization and Internet global access. Nowadays, it’s unbelievable to imagine the education without Internet, and maybe someday, teaching will be online.
-
+As we know, the Internet has had an academic nature practically since its inception, which is why the greatest innovations and almost all of its structure emerged from this environment prior to the democratization of the web and global access to the Internet.  Nowadays it is unthinkable to conceive of education without the use of the Internet, and in a not too distant future all teaching may be imparted through the Net. 
 \bigskip
 But a wide use is unconceivable without an appropriate, friendly, simple and even attractive user interface. This is why many companies spend millions of dollars improving theirs. ``Usability has come to stay''.\cite{jakonielsen} 
 
 \bigskip
-Since the final implementation of the \textit{Prado2 platform} by the \textit{Digital University Rector’s Delegation} (Delegación de la Rectora para la Universidad Digital) a hail of criticism has taken place among students and teachers towards the platform’s deficiencies. All of this, combined with the insufficient resources which the \textit{CEVUG (Virtual Teaching Centre of Granada University)} needs to offer an appropriate service, have made a potent and well established platform as moodle being rejected. In the kind words of \textit{Steve Krug}, ``If a system is unusable, no one will want to use it'' \cite{stevekrug}.
+After the final implementation of the \textit{Prado2 platform} by the \textit{Rector’s Commission for a Digital University} (Delegación de la Rectora para la Universidad Digital), both students and teaching staff have showered disapproval on the platform’s deficiencies. The \textit{Granada University’s virtual education centre (CEVUG)} is insufficiently funded to be able to provide a good service. This is the reason the powerful and well-established Moodle platform is  generating such criticism. In the words of \textit{Steve Krug} ‘If a system is unusable, no one will want to use it’\cite{stevekrug}.  
 
 \bigskip
-Regarding to the platform's previous analysis, we found some errors that could be easily resolved and they would improve hugely the ease of use.
+With respect to the initial analysis of the platform, we found various errors that could be easily solved, greatly improving ease of use.
+\bigskip
+The survey results were as expected and we observed that the vast majority of users only need a platform to upload and download documents, and create tasks. We also observed that a good number of users would find it very useful to have better access from mobile platforms, either using a mobile browser adapted design or using a native smartphone app.
 
 \bigskip
-The survey resulted as expected and we noticed that the vast majority of users just need a platform where they can upload and download documents, and create tasks. We also noticed that a good number of users would find very useful a better access from mobile platforms, either using a design adapted for mobile browsers, or a native smartphone app.
+The analysis of the platform logs support the survey results. A minimum percentage of the platform’s features is barely used, and this could be used to deactivate some options in order to simplify Prado’s usability.
 
 \bigskip
-The analysis of the platform logs support the survey results. A minimum percentage of the platform’s features is barely used. Some options could be deactivated in order to increase Prado’s usability.
-
-\bigskip
-With regard to security, we show that it's quite low and should be immediately improved. A malicious user could steal information and documents from teachers or students and make an illicit use of them.
+In terms of security we demonstrate that there is much room for improvement and should be amended as soon as possible, as a malicious user could steal and misuse information and documents from both teaching staff and from students.
 
 \bigskip
 I would like to highlight the great effort made by the CEVUG professionals and I don't want this analysys to be understood as a critique towards their excellent job. With my experience as a web developer I can affirm that it’s not easy to keep in mind thousands of aspects required to customize, adapt and optimize a platform, more so when you work against the clock solving problems, which in many cases just allows making a ``temporary'' solution that stands in time indefinitely. This is why this report, although addressed to them as an aid to optimize the platform, maybe should make their superiors realize that something as important as the teaching support web platform should have more resources.
 
 \bigskip
-Just as a referral, Spain’s National Police Corps uses a full time team of 8 people to manage their twitter account. Prado, being clearly more complex and requiring much more work only counts with a full time developer and two part-time auxiliaries. 
-
-
+Just as a referral, the Spanish National Police Corps uses a full time team of 8 people to manage their twitter account. The Prado platfrom, clearly more complex and requiring much more work actually doesn't have any developer and only counts with three part-time platform administrators. 
+
 \newpage
 \thispagestyle{empty}
 \
