--- a/text/prefaces/prefaces.tex
+++ b/text/prefaces/prefaces.tex
@@ -10,7 +10,7 @@
 \bigskip
 \noindent{\textbf{Palabras clave}: \textit{\keywords}\\
 
-Este proyecto tiene como objetivo la elaboración de un informe profesional sobre la \textit{Plataforma de Recursos de Apoyo a la docencia} en uso actualmente por la \textit{Universidad de Granada} analizando su {\tt Accesibilidad}, {\tt Usabilidad}, {\tt Seguridad} y \tt{Disponibilidad}.
+Este proyecto tiene como objetivo la elaboración de un informe profesional sobre la \textit{Plataforma de Recursos de Apoyo a la docencia} en uso actualmente por la \textit{Universidad de Granada} analizando su {\tt Accesibilidad}, {\tt Usabilidad}, {\tt Seguridad} y {\tt Disponibilidad}.
 
 \bigskip
 Para dicho análisis se realizaron encuestas a usuarios de la plataforma, se analizaron las estadísticas de uso en colaboración con los administradores de la misma, se analizó el código de la plataforma \textit{moodle}, se revisaron las recomendaciones de buenas practicas de sus desarrolladores y se estudiaron algunas de las vulnerabilidades documentadas en sus CVE\footnote{Common Vulnerabilities and Exposures, siglas CVE, es una lista de información registrada sobre conocidas vulnerabilidades de seguridad, donde cada referencia tiene un número de identificación único.}.
