--- a/text/back/glossary.tex
+++ b/text/back/glossary.tex
@@ -86,6 +86,21 @@
 
 
 
+\textbf{WireShark}: Es un analizador de protocolos utilizado para realizar análisis y solucionar problemas en redes de comunicaciones, para desarrollo de software y protocolos, y como una herramienta didáctica.
+\bigskip
+
+\textbf{StatusCake}: Es un servicio web que permite monitorizar la disponibilidad de servicios online.
+\bigskip
+
+\textbf{R}: Entorno y lenguaje de programación con un enfoque al análisis estadístico. Se trata de uno de los lenguajes más utilizados en investigación por la comunidad estadística, siendo además muy popular en el campo de la minería de datos, la investigación biomédica, la bioinformática y las matemáticas financieras. 
+\bigskip
+
+\textbf{Google Forms}: Google Forms es una herramienta que permite recopilar información de los usuarios a través de una encuesta o un cuestionario personalizado. La información se recoge y se conecta automáticamente a una hoja de cálculo. La hoja de cálculo se rellena con las respuestas de encuesta y cuestionario.
+\bigskip
+
+\textbf{Google SpreadSheet}: Es un servicio vía web de hojas de cálculo, realizado en tecnología AJAX.
+\bigskip
+
 
 
 \textbf{YUI}: Yahoo User Interface(YUI), una serie de bibliotecas escritas en JavaScript, para la construcción de aplicaciones interactivas cuyo desarrollo se descontinuó el 29 de agosto de 2014
