--- a/text/back/bibliography.tex
+++ b/text/back/bibliography.tex
@@ -32,6 +32,7 @@ Eric Reiss.
 
 \subsubsection*{Artículos sobre las metodologías utilizadas en el proyecto:}
 
+\bibitem{art_12} `'Cuando un profesor de la Gran Depresión predijo la educación online'. Jonathan Préstamo. 09/06/2017. \url{http://www.teknoplof.com/2017/06/09/cuando-profesor-la-gran-depresion-predijo-la-educacion-online/}
 
 \bibitem{art_11} ``Legislación sobre accesibilidad web en España, Europa y otros países''. Olga Carreras Montoto. 11/12/2016. \url{https://olgacarreras.blogspot.com.es/2005/01/referencia-sobre-legislacin-espaola.html}
 
@@ -75,6 +76,9 @@ Eric Reiss.
 \bibitem{codesniffer} {\tt HTML CodeSniffer}. \url{http://squizlabs.github.io/HTML_CodeSniffer/}
 \bibitem{openwrt} {\tt OpenWRT}. \url{https://wiki.openwrt.org/toh/huawei/hg556a}
 \bibitem{moodledb} Moodle Database Schema. \url{https://docs.moodle.org/dev/Database_Schema}
+\bibitem{mooc} MOOC. \url{https://es.wikipedia.org/wiki/Massive_Open_Online_Course}
+
+
 
 
 \bigskip
