--- a/text/back/glossary.tex
+++ b/text/back/glossary.tex
@@ -16,6 +16,10 @@
 \textbf{Disponibilidad}: medida que nos indica cuánto tiempo está disponible ese equipo o sistema operativo respecto de la duración total durante la que se hubiese deseado que funcionase.
 \bigskip
 
+
+\textbf{MOOC}: Acrónimo en inglés de Massive Open Online Course, son cursos en línea dirigidos a un amplio número de participantes a través de Internet según el principio de educación abierta y masiva.
+\bigskip
+
  \textbf{Auditoría de seguridad}: estudio que comprende el análisis y gestión de sistemas llevado a cabo por profesionales para identificar, enumerar y posteriormente describir las diversas vulnerabilidades que pudieran presentarse en una revisión exhaustiva de las estaciones de trabajo, redes de comunicaciones o servidores.
 \bigskip
 
