--- a/text/project.tex
+++ b/text/project.tex
@@ -21,12 +21,7 @@
 
 \usepackage{booktabs}
 
-
-%\usepackage{minted}
-
 \usepackage{rotating}
-
-\usepackage{blindtext}
 
 
 % Información reutilizable
@@ -83,35 +78,44 @@
 \colorlet{punct}{red!60!black}
 \colorlet{numb}{magenta!60!black}
 
+	\definecolor{dkgreen}{rgb}{0,0.6,0}
+	\definecolor{gray}{rgb}{0.5,0.5,0.5}
+	\definecolor{mauve}{rgb}{0.58,0,0.82}
+
 % Listados
 \lstset{
 	aboveskip=0.5cm,
 	backgroundcolor=\color{gray97},
 	basicstyle=\scriptsize\ttfamily,
 	breaklines=true,
-	commentstyle=\color{gray45},
+	%commentstyle=\color{gray45},
 	frame=Ltb,
 	framerule=0.5pt,
 	framesep=0pt,
 	framexbottommargin=3pt,
 	framexleftmargin=0.1cm,
 	framextopmargin=3pt,
-	keywordstyle=\bfseries,
+	%keywordstyle=\bfseries,
 	numberfirstline = false,
 	numbers=left,
 	numbersep=6pt,
-	numberstyle=\tiny,
+	%numberstyle=\tiny,
 	rulesep=.4pt,
 	rulesepcolor=\color{black},
 	showstringspaces = false,
-	stringstyle=\ttfamily,
+	%stringstyle=\ttfamily,
+	  numberstyle=\tiny\color{gray},
+	  keywordstyle=\color{blue},
+	  commentstyle=\color{dkgreen},
+	  stringstyle=\color{mauve},	
 	literate={á}{{\'a}}1
 	         {é}{{\'e}}1
 	         {í}{{\'i}}1
 	         {ó}{{\'o}}1
 	         {ú}{{\'u}}1
-	         {ñ}{{\~n}}1
+	         {ñ}{{\~n}}1      
 }
+
 
 % Minimizar fragmentado de listados
 \lstnewenvironment{listing}[1][]
