strings to italic

--- a/text/prefaces/prefaces.tex
+++ b/text/prefaces/prefaces.tex
@@ -60,7 +60,7 @@ The analysis of the platform logs support the survey results. A minimum percenta
 In terms of security we demonstrate that there is much room for improvement and should be amended as soon as possible, as a malicious user could steal and misuse information and documents from both teaching staff and from students.
 
 \bigskip
-I would like to highlight the great effort made by the CEVUG professionals and I don't want this analysys to be understood as a critique towards their excellent job. With my experience as a web developer I can affirm that it’s not easy to keep in mind thousands of aspects required to customize, adapt and optimize a platform, more so when you work against the clock solving problems, which in many cases just allows making a ``temporary'' solution that stands in time indefinitely. This is why this report, although addressed to them as an aid to optimize the platform, maybe should make their superiors realize that something as important as the teaching support web platform should have more resources.
+I would like to highlight the great effort made by the \textit{CEVUG} professionals and I don't want this analysys to be understood as a critique towards their excellent job. With my experience as a web developer I can affirm that it’s not easy to keep in mind thousands of aspects required to customize, adapt and optimize a platform, more so when you work against the clock solving problems, which in many cases just allows making a ``temporary'' solution that stands in time indefinitely. This is why this report, although addressed to them as an aid to optimize the platform, maybe should make their superiors realize that something as important as the teaching support web platform should have more resources.
 
 \bigskip
 Just as a referral, the Spanish National Police Corps uses a full time team of 8 people to manage their twitter account. The Prado platfrom, clearly more complex and requiring much more work actually doesn't have any developer and only counts with three part-time platform administrators. 
