--- a/text/back/bibliography.tex
+++ b/text/back/bibliography.tex
@@ -29,6 +29,10 @@ Eric Reiss.
 
 \subsubsection*{Artículos sobre las metodologías utilizadas en el proyecto:}
 
+\bibitem{art_14} `'The Distributed Course'. Stephen Downes. 2008. \url{https://sites.google.com/site/themoocguide/3-cck08---the-distributed-course}
+
+\bibitem{art_13} ``Top Universities Test the Online Appeal of Free''. Richard Pérez-Peña. 18/07/2012. \url{http://www.nytimes.com/2012/07/18/education/top-universities-test-the-online-appeal-of-free.html}
+
 \bibitem{art_12} `'Cuando un profesor de la Gran Depresión predijo la educación online'. Jonathan Préstamo. 09/06/2017. \url{http://www.teknoplof.com/2017/06/09/cuando-profesor-la-gran-depresion-predijo-la-educacion-online/}
 
 \bibitem{art_11} ``Legislación sobre accesibilidad web en España, Europa y otros países''. Olga Carreras Montoto. 11/12/2016. \url{https://olgacarreras.blogspot.com.es/2005/01/referencia-sobre-legislacin-espaola.html}
