--- a/text/prefaces/prefaces.tex
+++ b/text/prefaces/prefaces.tex
@@ -16,7 +16,7 @@ Este proyecto tiene como objetivo la elaboración de un informe profesional sobr
 Para dicho análisis se realizaron encuestas a usuarios de la plataforma, se analizaron las estadísticas de uso en colaboración con los administradores de la misma, se analizó el código de la plataforma \textit{moodle}, se revisaron las recomendaciones de buenas practicas de sus desarrolladores y se estudiaron algunas de las vulnerabilidades documentadas en sus CVE\footnote{Common Vulnerabilities and Exposures, siglas CVE, es una lista de información registrada sobre conocidas vulnerabilidades de seguridad, donde cada referencia tiene un número de identificación único.}.
 
 \bigskip
-El informe final tendrá como objetivo dar a conocer tanto las fortalezas como las debilidades de la plataforma Prado2 con objeto de servir de ayuda a sus administradores para mejorar la misma y ayudándoles a su vez a conocer la opinión de sus usuarios.
+El informe final tiene como objetivo dar a conocer tanto las fortalezas como las debilidades de la plataforma Prado2 con objeto de servir de ayuda a sus administradores para mejorar la misma y ayudándoles a su vez a conocer la opinión de sus usuarios.
 
 
 \newpage
@@ -35,35 +35,35 @@ El informe final tendrá como objetivo dar a conocer tanto las fortalezas como l
 The goal of this project is to develop a professional report on the \textit{Plataforma de Recursos de Apoyo a la Docencia} (Teaching Support Resources Platform), currently in use by the \textit{University of Granada}, analyzing its accessibility, usability, security and availability.
 
 \bigskip
-To develop this research paper, we have analyzed the data comming from surveys made by platform's users and usage statistics. The usage statistics have been analyzed in cooperation with its administrators. Also, we have analyzed Moodle's source code, reviewed the \textit{Moodle developers' good practices recommendations} and studied some of the vulnerabilities documented in the \textit{Common Vulnerabilities and Exposures} or \textit{CVE}.
+To develop this report, we have analyzed the data comming from surveys made by platform's users and usage statistics. The usage statistics have been analyzed in cooperation with its administrators. Also, we have analyzed Moodle's source code, reviewed the \textit{Moodle developers' good practices recommendations} and studied some of the vulnerabilities documented in the \textit{Common Vulnerabilities and Exposures} or \textit{CVE}\footnote{The Common Vulnerabilities and Exposures (CVE) system provides a reference-method for publicly known information-security vulnerabilities and exposures.}.
 
 \bigskip
 The aim of final report is to show the \textit{Prado2's} strengths and weaknesses, with the purpose of helping its administrators to make improvements the platform and, at the same time, helping them getting to know the opinion of the users.
 
 \bigskip
-As we know, the Internet has had an academic nature practically since its inception, which is why the greatest innovations and almost all of its structure emerged from this environment prior to the democratization of the web and global access to the Internet.  Nowadays it is unthinkable to conceive of education without the use of the Internet, and in a not too distant future all teaching may be imparted through the Net. 
+As we know, the Internet has had an academic nature practically since its inception, which is why the greatest innovations and almost all of its structure emerged from this environment prior to the democratization of the web and global access to the Internet.  Nowadays it is unthinkable to conceive education without the use of the Internet, and in a not too distant future all teaching may be imparted through the Net. 
 \bigskip
 But a wide use is unconceivable without an appropriate, friendly, simple and even attractive user interface. This is why many companies spend millions of dollars improving theirs. ``Usability has come to stay''.\cite{jakonielsen} 
 
 \bigskip
-After the final implementation of the \textit{Prado2 platform} by the \textit{Rector’s Commission for a Digital University} (Delegación de la Rectora para la Universidad Digital), both students and teaching staff have showered disapproval on the platform’s deficiencies. The \textit{Granada University’s virtual education centre (CEVUG)} is insufficiently funded to be able to provide a good service. This is the reason the powerful and well-established Moodle platform is  generating such criticism. In the words of \textit{Steve Krug} ‘If a system is unusable, no one will want to use it’\cite{stevekrug}.  
+After the final implementation of the \textit{Prado2 platform} by the \textit{Rector’s Commission for a Digital University} (Delegación de la Rectora para la Universidad Digital), some students and teaching staff have showered disapproval on the platform’s deficiencies. The \textit{Granada University’s virtual education centre (CEVUG)} clearly needs more resources to provide a good service. This is the reason the powerful and well-established Moodle platform is  generating such criticism. In the words of \textit{Steve Krug} ‘If a system is unusable, no one will want to use it’\cite{stevekrug}.  
 
 \bigskip
-With respect to the initial analysis of the platform, we found various errors that could be easily solved, greatly improving ease of use.
+With respect to the initial analysis of the platform, we have found various errors that could be easily solved, greatly improving the ease of use.
 \bigskip
-The survey results were as expected and we observed that the vast majority of users only need a platform to upload and download documents, and create tasks. We also observed that a good number of users would find it very useful to have better access from mobile platforms, either using a mobile browser adapted design or using a native smartphone app.
+The survey results were as expected and we have observed that the vast majority of users only need a platform for simple tasks as upload and download documents, and create tasks. We also observed that a good number of users would find it very useful to have better access from mobile platforms, either using a mobile browser adapted design or using a native smartphone app.
 
 \bigskip
-The analysis of the platform logs support the survey results. A minimum percentage of the platform’s features is barely used, and this could be used to deactivate some options in order to simplify Prado’s usability.
+The analysis of the platform logs support the survey results. Some of the platform’s features is barely used, and this could be used to deactivate some options in order to simplify Prado’s usability.
 
 \bigskip
-In terms of security we demonstrate that there is much room for improvement and should be amended as soon as possible, as a malicious user could steal and misuse information and documents from both teaching staff and from students.
+In terms of security we demonstrate that there is much room for improvement and the platform should be amended as soon as possible, as a malicious user could steal and misuse information and documents from both teaching staff and from students.
 
 \bigskip
 I would like to highlight the great effort made by the \textit{CEVUG} professionals and I don't want this analysys to be understood as a critique towards their excellent job. With my experience as a web developer I can affirm that it’s not easy to keep in mind thousands of aspects required to customize, adapt and optimize a platform, more so when you work against the clock solving problems, which in many cases just allows making a ``temporary'' solution that stands in time indefinitely. This is why this report, although addressed to them as an aid to optimize the platform, maybe should make their superiors realize that something as important as the teaching support web platform should have more resources.
 
 \bigskip
-Just as a referral, the Spanish National Police Corps uses a full time team of 8 people to manage their twitter account. The Prado platfrom, clearly more complex and requiring much more work actually doesn't have any developer and only counts with three part-time platform administrators. 
+Just as an example, the Spanish National Police Corps uses a full time team of 8 people to manage their twitter account. The Prado platfrom, clearly more complex and requiring much more work actually doesn't have any developer and only counts with three part-time platform administrators. 
 
 \newpage
 \thispagestyle{empty}
