--- a/text/prefaces/prefaces.tex
+++ b/text/prefaces/prefaces.tex
@@ -115,7 +115,11 @@ Y para que conste, expide y firma el presente informe en \ciudad\ a \today.
 
 \textbf{El tutor:}
 
-\vspace{5cm}
+\vspace{3cm}
+
+\begin{figure}[H]
+\includegraphics[width=0.3\textwidth]{../../firmaZerjillo3}
+\end{figure}
 
 \noindent \textbf{\tutor}
 
