--- a/text/project.tex
+++ b/text/project.tex
@@ -26,8 +26,8 @@
 
 % Información reutilizable
 \newcommand{\asunto}{Trabajo de Fin de Grado}
-\newcommand{\titulo}{Análisis de plataforma de recursos de apoyo a la docencia}
-\newcommand{\tituloEng}{Analysis of teaching support resources platform}
+\newcommand{\titulo}{Análisis de plataforma de recursos de apoyo a la docencia Prado2}
+\newcommand{\tituloEng}{Analysis of teaching support resources platform Prado2}
 \newcommand{\grado}{Grado en Ingeniería Informática}
 \newcommand{\autor}{Ernesto Serrano Collado}
 \newcommand{\email}{info@ernesto.es}
