--- a/text/prefaces/prefaces.tex
+++ b/text/prefaces/prefaces.tex
@@ -41,15 +41,17 @@ To develop this report, we have analyzed the data comming from surveys made by p
 The aim of final report is to show the \textit{Prado2's} strengths and weaknesses, with the purpose of helping its administrators to make improvements the platform and, at the same time, helping them getting to know the opinion of the users.
 
 \bigskip
-As we know, the Internet has had an academic nature practically since its inception, which is why the greatest innovations and almost all of its structure emerged from this environment prior to the democratization of the web and global access to the Internet.  Nowadays it is unthinkable to conceive education without the use of the Internet, and in a not too distant future all teaching may be imparted through the Net. 
-\bigskip
-But a wide use is unconceivable without an appropriate, friendly, simple and even attractive user interface. This is why many companies spend millions of dollars improving theirs. ``Usability has come to stay''.\cite{jakonielsen} 
+As we know, the Internet has had an academic nature practically since its inception, which is why the greatest innovations and almost all of its structure emerged from this environment prior to the democratization of the web and global access to the Internet.  Nowadays it is unthinkable to conceive education without the use of the Internet, and in a not too distant future all teaching may be imparted through the Net.
 
 \bigskip
-After the final implementation of the \textit{Prado2 platform} by the \textit{Rector’s Commission for a Digital University} (Delegación de la Rectora para la Universidad Digital), some students and teaching staff have showered disapproval on the platform’s deficiencies. The \textit{Granada University’s virtual education centre (CEVUG)} clearly needs more resources to provide a good service. This is the reason the powerful and well-established Moodle platform is  generating such criticism. In the words of \textit{Steve Krug} ‘If a system is unusable, no one will want to use it’\cite{stevekrug}.  
+But a wide use is unconceivable without an appropriate, friendly, simple and even attractive user interface. This is why many companies spend millions of dollars improving theirs. ``Usability has come to stay''.\cite{jakonielsen}
 
 \bigskip
-With respect to the initial analysis of the platform, we have found various errors that could be easily solved, greatly improving the ease of use.
+After the final implementation of the \textit{Prado2 platform} by the \textit{Rector’s Commission for a Digital University} (Delegación de la Rectora para la Universidad Digital), some students and teaching staff have showered disapproval on the platform’s deficiencies. The \textit{Granada University’s virtual education centre (CEVUG)} clearly needs more resources to provide a good service. This is the reason the powerful and well-established Moodle platform is  generating such criticism. In the words of \textit{Steve Krug} ‘If a system is unusable, no one will want to use it’\cite{stevekrug}.
+
+\bigskip
+With respect to the initial analysis of the platform, we have found various errors that could be easily solved, greatly improving the ease of use.
+
 \bigskip
 The survey results were as expected and we have observed that the vast majority of users only need a platform for simple tasks as upload and download documents, and create tasks. We also observed that a good number of users would find it very useful to have better access from mobile platforms, either using a mobile browser adapted design or using a native smartphone app.
 
@@ -63,8 +65,9 @@ In terms of security we demonstrate that there is much room for improvement and 
 I would like to highlight the great effort made by the \textit{CEVUG} professionals and I don't want this analysys to be understood as a critique towards their excellent job. With my experience as a web developer I can affirm that it’s not easy to keep in mind thousands of aspects required to customize, adapt and optimize a platform, more so when you work against the clock solving problems, which in many cases just allows making a ``temporary'' solution that stands in time indefinitely. This is why this report, although addressed to them as an aid to optimize the platform, maybe should make their superiors realize that something as important as the teaching support web platform should have more resources.
 
 \bigskip
-Just as an example, the Spanish National Police Corps uses a full time team of 8 people to manage their twitter account. The Prado platfrom, clearly more complex and requiring much more work actually doesn't have any developer and only counts with three part-time platform administrators. 
-
+Just as an example, the Spanish National Police Corps uses a full time team of 8 people to manage their twitter account. The Prado platfrom, clearly more complex and requiring much more work actually doesn't have any developer and only counts with three part-time platform administrators.
+
+
 \newpage
 \thispagestyle{empty}
 \
@@ -117,9 +120,9 @@ Y para que conste, expide y firma el presente informe en \ciudad\ a \today.
 
 \vspace{3cm}
 
-\begin{figure}[H]
-\includegraphics[width=0.3\textwidth]{../../firmaZerjillo3}
-\end{figure}
+%\begin{figure}[H]
+%\includegraphics[width=0.3\textwidth]{../../firmaZerjillo3}
+%\end{figure}
 
 \noindent \textbf{\tutor}
 
